# nlp-closecubee

./: .gitignore  README.md  app.py  custom_explain.py  custom_model.py  eval.py  explain.py  main.py  modal_app.py  pyproject.toml  requirements.txt  trace_beam_sentence_0.json  trace_sentence_0.json  train.py
configs/: bartpho.yaml  default.yaml  ensemble_mbr.yaml  felix.yaml  felix_plus.yaml  vit5_constrained.yaml  vit5_large.yaml
dataset/: 1k_TV4_T2T.xlsx  Corpus-Vie-VSL-10K.xlsx  README.md  VSL-Lexicon.rar  VSL10k.txt  VSL10k_phantich.txt  Vie10k.txt  Vie10k_phantich.txt
demo_materials/: README.md
demo_materials/configs/: vit5_base_15ep_config_used.yaml
demo_materials/examples/: ensemble_mbr_correct_test.md  felix_plus_xlmr_large_15ep_errors_test.md  selected_cases.csv  selected_cases_with_felix.md  vit5_base_15ep_correct_test.md  vit5_base_15ep_errors_test.md
demo_materials/metrics/: comparison_table.csv  comparison_table.md  ensemble_mbr_metrics_test.json  felix_plus_xlmr_large_15ep_metrics_test.json  vit5_base_15ep_metrics_test.json
demo_materials/reports/: corpus_stats.json  (+4 more)
reports/: corpus_stats.md  leaderboard_test.md  split_stats.json
scripts/: run_ablation.py  run_pipeline.py
tests/: test_felix_plus_config.py  test_felix_plus_data.py  test_felix_plus_decode.py  test_felix_plus_decode_parity.py  test_felix_plus_labels.py  test_felix_plus_model.py  test_felix_plus_rerank.py  test_felix_plus_split_fairness.py  test_felix_plus_train_import.py
vsl_gloss/: __init__.py  config.py  ensemble.py  evaluate.py  metrics.py  predict.py  train.py  utils.py
(+98 files in other folders)
