[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vsl-text2gloss"
version = "0.1.0"
description = "Vietnamese sentence -> Vietnamese Sign Language (VSL) gloss sequence, text-to-text."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "CloseCubee" }]

[tool.setuptools]
packages = ["vsl_gloss", "vsl_gloss.data", "vsl_gloss.baselines", "vsl_gloss.models"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
